add market page, add chart

--- a/index.html
+++ b/index.html
@@ -133,17 +133,17 @@
                 <img id="line-nav" src="assets/floating/line_nav.png"/>
             </span>
 
-            <a href="">
+            <a href="index.html">
                 <img src="assets/logo.svg">
             </a>
             <div class="menu-nav-wrapper">
-                <a href="">
+                <a href="index.html">
                     Home
                 </a>
                 <a href="">
                     Exchange
                 </a>
-                <a href="">
+                <a href="market.html">
                     Markets
                 </a>
                 <a href="">
@@ -629,7 +629,7 @@
                     </tbody>
                 </table>
             </div>
-            <a href="">
+            <a href="market.html">
                 View more markets
             </a>
         </div>
