add contact page

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a href="">
                     Blog
                 </a>
-                <a href="">
+                <a href="contact.html">
                     Support
                 </a>
             </div>
@@ -92,46 +92,24 @@
                     <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
                     <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
                 </div>
-                <button onclick="togglePanel(this)">
-                    <span>Home</span> <img src="assets/carret.svg"/>
-                </button>
-                <div class="panel">
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                </div>
-                <button onclick="togglePanel(this)">
-                    <span>Home</span> <img src="assets/carret.svg"/>
-                </button>
-                <div class="panel">
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                </div>
-                <button onclick="togglePanel(this)">
-                    <span>Home</span> <img src="assets/carret.svg"/>
-                </button>
-                <div class="panel">
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                </div>
-                <button onclick="togglePanel(this)">
-                    <span>Home</span> <img src="assets/carret.svg"/>
-                </button>
-                <div class="panel">
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                </div>
+                <a class="plain" href="">
+                    Exchange
+                </a>
+                <a class="plain" href="market.html">
+                    Markets
+                </a>
+                <a class="plain" href="">
+                    Learn
+                </a>
+                <a class="plain" href="">
+                    Forum
+                </a>
+                <a class="plain" href="">
+                    Blog
+                </a>
+                <a class="plain" href="contact.html">
+                    Support
+                </a>
 
                 <a href="">
                     Download
