--- a/market.html
+++ b/market.html
@@ -55,7 +55,7 @@
                 <a href="">
                     Blog
                 </a>
-                <a href="">
+                <a href="contact.html">
                     Support
                 </a>
             </div>
@@ -93,46 +93,24 @@
                     <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
                     <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
                 </div>
-                <button onclick="togglePanel(this)">
-                    <span>Home</span> <img src="assets/carret.svg"/>
-                </button>
-                <div class="panel">
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                </div>
-                <button onclick="togglePanel(this)">
-                    <span>Home</span> <img src="assets/carret.svg"/>
-                </button>
-                <div class="panel">
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                </div>
-                <button onclick="togglePanel(this)">
-                    <span>Home</span> <img src="assets/carret.svg"/>
-                </button>
-                <div class="panel">
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                </div>
-                <button onclick="togglePanel(this)">
-                    <span>Home</span> <img src="assets/carret.svg"/>
-                </button>
-                <div class="panel">
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                    <a href=""><img src="assets/icon_menu.svg"/> lorem</a>
-                </div>
+                <a class="plain" href="">
+                    Exchange
+                </a>
+                <a class="plain" href="market.html">
+                    Markets
+                </a>
+                <a class="plain" href="">
+                    Learn
+                </a>
+                <a class="plain" href="">
+                    Forum
+                </a>
+                <a class="plain" href="">
+                    Blog
+                </a>
+                <a class="plain" href="contact.html">
+                    Support
+                </a>
 
                 <a href="">
                     Download
@@ -499,9 +477,6 @@
                 </table>
             </div>
 
-            <style>
-
-            </style>
             <div class="market-table-mobile">
                 <div class="market-mobile-item">
                     <div class="top">
