mobile contact page

--- a/contact.html
+++ b/contact.html
@@ -142,10 +142,14 @@
                                 Get Verivied
                             </option>
                         </select>
+                        <label class="mobile">
+                            Email address associated with your Kraken account*
+                        </label>
+                        <input type="email" class="input mobile" placeholder="FIll Your Email"/>
                         <label>
                             Request category*
                         </label>
-                        <select class="input">
+                        <select class="input last">
                             <option>
                                 Get Verivied
                             </option>
@@ -154,15 +158,15 @@
                             Select the option that matches closest with the topic of your request. If you cannot sign in to your account, review our 'I can’t sign in to my account' article here for troubleshooting tips: https://support.kraken.com/hc/en-us/articles/201889308-I-can-t-sign-in-to-my-account-
                         </div>
 
-                        <button class="submit-btn">
+                        <button class="submit-btn m-hide">
                             Submit
                         </button>
                     </div>
                     <div>
-                        <label>
+                        <label class="m-hide">
                             Email address associated with your Kraken account*
                         </label>
-                        <input type="email" class="input" placeholder="FIll Your Email"/>
+                        <input type="email" class="input m-hide" placeholder="FIll Your Email"/>
                         <label>
                             Tell us about your request. The more detail the better.*
                         </label>
@@ -170,6 +174,10 @@
                         <div class="detail-textarea">
                             A member of our support staff will respond as soon as possible.
                         </div>
+
+                        <button class="submit-btn mobile">
+                            Submit
+                        </button>
                     </div>
                 </div>
             </div>
