update dark mode learn, contact, market page | add chart on landing page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 	
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
     <link rel="stylesheet" type="text/css" href="global.css"/>
     <link rel="stylesheet" type="text/css" href="home.css"/>
@@ -261,7 +261,7 @@
                             <td>
                                 Bitcoin
                             </td>
-                            <td class="fade-label">
+                            <td class="fade-label invert">
                                 BTC
                             </td>
                             <td>
@@ -274,7 +274,8 @@
                                 $598.4B	
                             </td>
                             <td>
-                                <img src="assets/chart_market.png">
+                                <!-- <img src="assets/chart_market.png"> -->
+                                <canvas class="myChart-1" width="162" height="56" style="z-index: -1;"></canvas>
                             </td>
                         </tr>
                         <tr class="table-item table-margin-btm">
@@ -287,7 +288,7 @@
                             <td>
                                 Bitcoin
                             </td>
-                            <td class="fade-label">
+                            <td class="fade-label invert">
                                 BTC
                             </td>
                             <td>
@@ -300,7 +301,8 @@
                                 $598.4B	
                             </td>
                             <td>
-                                <img src="assets/chart_market.png">
+                                <!-- <img src="assets/chart_market.png"> -->
+                                <canvas class="myChart-2" width="162" height="56" style="z-index: -1;"></canvas>
                             </td>
                         </tr>
                         <tr class="table-item table-margin-btm">
@@ -313,7 +315,7 @@
                             <td>
                                 Bitcoin
                             </td>
-                            <td class="fade-label">
+                            <td class="fade-label invert">
                                 BTC
                             </td>
                             <td>
@@ -326,7 +328,8 @@
                                 $598.4B	
                             </td>
                             <td>
-                                <img src="assets/chart_market.png">
+                                <!-- <img src="assets/chart_market.png"> -->
+                                <canvas class="myChart-3" width="162" height="56" style="z-index: -1;"></canvas>
                             </td>
                         </tr>
                         <tr class="table-item table-margin-btm">
@@ -339,7 +342,7 @@
                             <td>
                                 Bitcoin
                             </td>
-                            <td class="fade-label">
+                            <td class="fade-label invert">
                                 BTC
                             </td>
                             <td>
@@ -352,7 +355,8 @@
                                 $598.4B	
                             </td>
                             <td>
-                                <img src="assets/chart_market.png">
+                                <!-- <img src="assets/chart_market.png"> -->
+                                <canvas class="myChart-4" width="162" height="56" style="z-index: -1;"></canvas>
                             </td>
                         </tr>
                         <tr class="table-item table-margin-btm">
@@ -365,7 +369,7 @@
                             <td>
                                 Bitcoin
                             </td>
-                            <td class="fade-label">
+                            <td class="fade-label invert">
                                 BTC
                             </td>
                             <td>
@@ -378,7 +382,8 @@
                                 $598.4B	
                             </td>
                             <td>
-                                <img src="assets/chart_market.png">
+                                <!-- <img src="assets/chart_market.png"> -->
+                                <canvas class="myChart-5" width="162" height="56" style="z-index: -1;"></canvas>
                             </td>
                         </tr>
                     </tbody>
@@ -406,7 +411,8 @@
                     </div>
                     <div class="mid">
                         <span>Chart</span>
-                        <img src="assets/chart_market.png"/>
+                        <!-- <img src="assets/chart_market.png"/> -->
+                        <canvas class="myChartm-1" width="162" height="56" style="z-index: -1;"></canvas>
                     </div>
                 </div>
                 <div class="market-mobile-item">
@@ -427,7 +433,8 @@
                     </div>
                     <div class="mid">
                         <span>Chart</span>
-                        <img src="assets/chart_market.png"/>
+                        <!-- <img src="assets/chart_market.png"/> -->
+                        <canvas class="myChartm-2" width="162" height="56" style="z-index: -1;"></canvas>
                     </div>
                 </div>
                 <div class="market-mobile-item">
@@ -448,7 +455,8 @@
                     </div>
                     <div class="mid">
                         <span>Chart</span>
-                        <img src="assets/chart_market.png"/>
+                        <!-- <img src="assets/chart_market.png"/> -->
+                        <canvas class="myChartm-3" width="162" height="56" style="z-index: -1;"></canvas>
                     </div>
                 </div>
                 <div class="market-mobile-item">
@@ -469,7 +477,8 @@
                     </div>
                     <div class="mid">
                         <span>Chart</span>
-                        <img src="assets/chart_market.png"/>
+                        <!-- <img src="assets/chart_market.png"/> -->
+                        <canvas class="myChartm-4" width="162" height="56" style="z-index: -1;"></canvas>
                     </div>
                 </div>
                 <div class="market-mobile-item">
@@ -490,7 +499,8 @@
                     </div>
                     <div class="mid">
                         <span>Chart</span>
-                        <img src="assets/chart_market.png"/>
+                        <!-- <img src="assets/chart_market.png"/> -->
+                        <canvas class="myChartm-5" width="162" height="56" style="z-index: -1;"></canvas>
                     </div>
                 </div>
             </div>
