--- a/learn.html
+++ b/learn.html
@@ -218,7 +218,7 @@
         
         <div class="mid container above-grain">
             <div class="media-mid-item">
-                <img src="assets/media_ico.png"/>
+                <img class="invert" src="assets/media_ico.png"/>
                 <div>
                     <label>
                         Lorem ipsum
@@ -229,7 +229,7 @@
                 </div>
             </div>
             <div class="media-mid-item">
-                <img src="assets/media_ico.png"/>
+                <img class="invert" src="assets/media_ico.png"/>
                 <div>
                     <label>
                         Lorem ipsum
@@ -240,7 +240,7 @@
                 </div>
             </div>
             <div class="media-mid-item">
-                <img src="assets/media_ico.png"/>
+                <img class="invert" src="assets/media_ico.png"/>
                 <div>
                     <label>
                         Lorem ipsum
@@ -277,8 +277,10 @@
 
     <div id="get-start">
         <span class="wrapper-float">
-            <div id="start-blur-2"></div>
-            <div id="start-blur"></div>
+            <div class="start-blur-2 night"></div>
+            <div class="start-blur night"></div>
+            <div class="start-blur-2 day"></div>
+            <div class="start-blur day"></div>
         </span>
         <div class="container above-grain">
             <h1>
