--- a/market.html
+++ b/market.html
@@ -126,7 +126,8 @@
     <div id="market">
         <div class="container above-grain">
             <span class="wrapper-float">
-                <div id="market-blur"></div>
+                <div class="market-blur night"></div>
+                <div class="market-blur day"></div>
             </span>
             <h1>
                 Get cryptocurrency prices.
@@ -161,12 +162,12 @@
                                 1
                             </td>
                             <td width="3%">
-                                <img src="assets/bitcoin_ico.png">
+                                <img class="invert" src="assets/bitcoin_ico.png">
                             </td>
                             <td>
                                 Bitcoin
                             </td>
-                            <td class="fade-label">
+                            <td class="fade-label invert">
                                 BTC
                             </td>
                             <td>
@@ -193,12 +194,12 @@
                                 1
                             </td>
                             <td width="3%">
-                                <img src="assets/bitcoin_ico.png">
+                                <img class="invert" src="assets/bitcoin_ico.png">
                             </td>
                             <td>
                                 Bitcoin
                             </td>
-                            <td class="fade-label">
+                            <td class="fade-label invert">
                                 BTC
                             </td>
                             <td>
@@ -225,12 +226,12 @@
                                 1
                             </td>
                             <td width="3%">
-                                <img src="assets/bitcoin_ico.png">
+                                <img class="invert" src="assets/bitcoin_ico.png">
                             </td>
                             <td>
                                 Bitcoin
                             </td>
-                            <td class="fade-label">
+                            <td class="fade-label invert">
                                 BTC
                             </td>
                             <td>
@@ -257,12 +258,12 @@
                                 1
                             </td>
                             <td width="3%">
-                                <img src="assets/bitcoin_ico.png">
+                                <img class="invert" src="assets/bitcoin_ico.png">
                             </td>
                             <td>
                                 Bitcoin
                             </td>
-                            <td class="fade-label">
+                            <td class="fade-label invert">
                                 BTC
                             </td>
                             <td>
@@ -289,12 +290,12 @@
                                 1
                             </td>
                             <td width="3%">
-                                <img src="assets/bitcoin_ico.png">
+                                <img class="invert" src="assets/bitcoin_ico.png">
                             </td>
                             <td>
                                 Bitcoin
                             </td>
-                            <td class="fade-label">
+                            <td class="fade-label invert">
                                 BTC
                             </td>
                             <td>
@@ -321,12 +322,12 @@
                                 1
                             </td>
                             <td width="3%">
-                                <img src="assets/bitcoin_ico.png">
+                                <img class="invert" src="assets/bitcoin_ico.png">
                             </td>
                             <td>
                                 Bitcoin
                             </td>
-                            <td class="fade-label">
+                            <td class="fade-label invert">
                                 BTC
                             </td>
                             <td>
@@ -353,12 +354,12 @@
                                 1
                             </td>
                             <td width="3%">
-                                <img src="assets/bitcoin_ico.png">
+                                <img class="invert" src="assets/bitcoin_ico.png">
                             </td>
                             <td>
                                 Bitcoin
                             </td>
-                            <td class="fade-label">
+                            <td class="fade-label invert">
                                 BTC
                             </td>
                             <td>
@@ -385,12 +386,12 @@
                                 1
                             </td>
                             <td width="3%">
-                                <img src="assets/bitcoin_ico.png">
+                                <img class="invert" src="assets/bitcoin_ico.png">
                             </td>
                             <td>
                                 Bitcoin
                             </td>
-                            <td class="fade-label">
+                            <td class="fade-label invert">
                                 BTC
                             </td>
                             <td>
@@ -417,12 +418,12 @@
                                 1
                             </td>
                             <td width="3%">
-                                <img src="assets/bitcoin_ico.png">
+                                <img class="invert" src="assets/bitcoin_ico.png">
                             </td>
                             <td>
                                 Bitcoin
                             </td>
-                            <td class="fade-label">
+                            <td class="fade-label invert">
                                 BTC
                             </td>
                             <td>
@@ -449,12 +450,12 @@
                                 1
                             </td>
                             <td width="3%">
-                                <img src="assets/bitcoin_ico.png">
+                                <img class="invert" src="assets/bitcoin_ico.png">
                             </td>
                             <td>
                                 Bitcoin
                             </td>
-                            <td class="fade-label">
+                            <td class="fade-label invert">
                                 BTC
                             </td>
                             <td>
@@ -484,7 +485,7 @@
             <div class="market-table-mobile">
                 <div class="market-mobile-item">
                     <div class="top">
-                        1. <img src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade">BTC</span>
+                        1. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
                     </div>
                     <div class="mid">
                         <span>Last Price</span>
@@ -505,7 +506,7 @@
                 </div>
                 <div class="market-mobile-item">
                     <div class="top">
-                        2. <img src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade">BTC</span>
+                        2. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
                     </div>
                     <div class="mid">
                         <span>Last Price</span>
@@ -526,7 +527,7 @@
                 </div>
                 <div class="market-mobile-item">
                     <div class="top">
-                        3. <img src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade">BTC</span>
+                        3. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
                     </div>
                     <div class="mid">
                         <span>Last Price</span>
@@ -547,7 +548,7 @@
                 </div>
                 <div class="market-mobile-item">
                     <div class="top">
-                        4. <img src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade">BTC</span>
+                        4. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
                     </div>
                     <div class="mid">
                         <span>Last Price</span>
@@ -568,7 +569,7 @@
                 </div>
                 <div class="market-mobile-item">
                     <div class="top">
-                        5. <img src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade">BTC</span>
+                        5. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
                     </div>
                     <div class="mid">
                         <span>Last Price</span>
@@ -589,7 +590,7 @@
                 </div>
                 <div class="market-mobile-item">
                     <div class="top">
-                        6. <img src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade">BTC</span>
+                        6. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
                     </div>
                     <div class="mid">
                         <span>Last Price</span>
@@ -610,7 +611,7 @@
                 </div>
                 <div class="market-mobile-item">
                     <div class="top">
-                        7. <img src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade">BTC</span>
+                        7. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
                     </div>
                     <div class="mid">
                         <span>Last Price</span>
@@ -631,7 +632,7 @@
                 </div>
                 <div class="market-mobile-item">
                     <div class="top">
-                        8. <img src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade">BTC</span>
+                        8. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
                     </div>
                     <div class="mid">
                         <span>Last Price</span>
@@ -652,7 +653,7 @@
                 </div>
                 <div class="market-mobile-item">
                     <div class="top">
-                        9. <img src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade">BTC</span>
+                        9. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
                     </div>
                     <div class="mid">
                         <span>Last Price</span>
@@ -673,7 +674,7 @@
                 </div>
                 <div class="market-mobile-item">
                     <div class="top">
-                        10. <img src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade">BTC</span>
+                        10. <img class="invert" src="assets/icon_menu.svg"/> <span>Bitcoin</span> <span class="fade invert">BTC</span>
                     </div>
                     <div class="mid">
                         <span>Last Price</span>
@@ -869,9 +870,6 @@
             },
         };
         
-        function detectMob() {
-            return ( ( window.innerWidth <= 800 ) && ( window.innerHeight <= 600 ) );
-        }
 
         $(document).ready(function(){
             var n = detectMob() ? '.myChartm-' : '.myChart-'
@@ -882,7 +880,6 @@
                 ))
             }
         });
-        
     </script>
 </body>
 </html>
